2006-08-26  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-key.c
    * libseahorse/seahorse-validity.c:
    * libseahorse/seahorse-validity.h: Display proper validity. Fixes #351835

2006-08-25  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-key-data.c:
    * libseahorse/seahorse-ssh-key-data.h:
    * libseahorse/seahorse-ssh-operation.c:
    * libseahorse/seahorse-ssh-operation.h:
    * libseahorse/seahorse-ssh-key-properties.c:
    * libseahorse/seahorse-ssh-key-properties.glade: Allow 'renaming' of 
    SSH keys. Fixes #352868
    
2006-08-24  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-key-store.c:
    * libseahorse/seahorse-keyset.c:
    * src/seahorse-key-manager.c: When selected key jumps between tabs 
    select on new tab. Fixes #352311
    
2006-08-24  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/Makefile.am: distcheck fix
    * NEWS:
    * README: Version 0.9.3
    * configure.in: New version
    
2006-08-23  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-agent-ssh.c: Allocate memory for SSH agent
    messages dynamically. Fixes #352364
    
2006-08-22  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-gpg-options.c: Use g_file_xxx_contents for 
    atomic writing and reading of files. Fixes #352332
    
2006-08-22  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-cache.c:
    * agent/seahorse-agent-cache.glade:
    * agent/seahorse-agent-ssh.c:
    * agent/seahorse-agent-status.c:
    * agent/seahorse-agent.h: Make SSH keys show up in agent. Fixes #345990
    * libseahorse/seahorse-context.c: Minor context fixes.
    * libseahorse/seahorse-unknown-key.c: Put stock-id property in right place
    
2006-08-21  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-key-store.c:
    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-pgp-key.c: