@@ -1,5 +1,15 @@
 2006-08-26  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-key.c:
+    * libseahorse/seahorse-key.h:
+    * libseahorse/seahorse-pgp-key.c:
+    * libseahorse/seahorse-ssh-key.c:
+    * libseahorse/seahorse-unknown-key.c:
+    * src/seahorse-key-manager-store.c: Validity now displayed per UID. 
+    Fixes #351836
+    
+2006-08-26  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-pgp-key.c
     * libseahorse/seahorse-validity.c:
     * libseahorse/seahorse-validity.h: Display proper validity. Fixes #351835
